data/derived/fa15/progs/unify/prog0918.ml.out
Characters 55-66:
  | h::t -> ((10.0 ** x) * h) @ tenEx (x + 1) t;;
             ^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
